Fixed a background color issue of a page that opens when user clicks details button in park widget to see more detailed information. Before it was transparent backgrond but now it has solid color so the details can be visible.

--- a/static/styles.css
+++ b/static/styles.css
@@ -867,7 +867,7 @@ body {
     outline: none;
 }
 .park-modal{
-  background: cadetblue;
+  background: #5f9ea0 !important;
 }
 .park-modal-content{
   display: flex;
